frontend/src/uploader/Uploader.module.css
#csv-preview {
    border: 1px solid #ccc;
    overflow-x: auto;
}

#csv-preview table {
    border-collapse: collapse;
}

#csv-preview table th {
    padding: var(--ui-space-s) var(--ui-space-l) 0 0;
}

.id-column {
    background-color: rgb(190, 221, 248);
}

.date-column {
    background-color: rgb(255, 255, 182);
}

.data-column {
    background-color: rgb(234, 247, 232);
}

.dataset-editor {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: var(--ui-space-m);
}

.dataset-editor h3 {
    margin: 0;
}

.dataset-editor label {
    display: block;
}

.dataset-editor label.column-label {
    display: inline;
}

.delete-button {
    align-self: flex-end;
}

#uploader {
    padding: var(--ui-space-l);
    min-height: 50vh;
}

#uploader form {
    max-width: 600px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: var(--ui-space-m);
}

#uploader h2 {
    margin: var(--ui-space-l) 0 0;
}

.column-editor {
    display: flex;
    gap: var(--ui-space-s);
}

.column-editor > .column-select {
    flex-grow: 2;
}

.error,
.success {
    padding: var(--ui-space-m);
    border-radius: var(--ui-radius);
}

.error {
    background: rgb(255, 238, 238);
    border: 3px solid rgb(214, 1, 1);
}

.success {
    background-color: rgb(238, 238, 255);
    border: 3px solid rgb(142, 142, 255);
}

